    These directives may or may not improve performance, depending on your
    application.

    Added meta-predicates sort/3 and msort/3 to the library object "list".
    These sorting predicates accept as first-argument a closure to be used
    for comparing pairs of list terms when sorting.

    Updated the "parametric" example to also illustrate the use of parametric
    categories.

    Simplified usage of the "mtbatch" multi-threading benchmarks example
    by using conditional compilation directives for the Prolog-specific
    predicates instead of a parametric object.

    Updated the Logtalk Windows installer in order to detect the ECLiPSe 6.1
    version (both 32 and 64 bits versions). If both 6.0 and 6.1 versions are
    installed, the installer creates a shortcut for using version 6.1 as the
    back-end Prolog compiler.

    Updated the Logtalk Windows installer in order to detect SICStus Prolog
    4.x installations when running on Windows 64 bits versions.

    Update the Windows installer script in order to check for the new
    name of the SWI-Prolog executable (swipl-win.exe) when creating the
    integrations shortcuts and to detect SWI-Prolog 64 bits versions.


2.38.2 - January 31, 2010

    Added support for calling :/1 goals using the <</2 control construct.

    Added support for calling non-redefined built-in predicates using the
    :/1 control construct.

    Corrected a Logtalk compiler bug (introduced in version 2.38.1) where
    redefinitions of Prolog built-in predicates would be ignored. Thanks
    to Parker Jones for the bug report.

    Simplified declaration and handling of proprietary directives with
    meta-arguments by defining a '$lgt_pl_meta_directive'/1 predicate in
    all config files.

    Added '$lgt_tr_predicate_indicators'/2, '$lgt_tr_predicate_heads'/2, and
    '$lgt_tr_predicate_heads'/3 hook predicates to the Logtalk compiler in
    order to simplify handling of proprietary directives in config files.
