@@ -31,16 +31,17 @@ This example is made of four loader files and five source files:
 	benchmarks.lgt
 		contains the benchmark goals and testing predicates
 	plain.lgt
-		contains a definition for a list length predicate and a predicate 
-		for testing performance of the built-in predicates assertz/1 and 
-		retract/1
+		contains definitions for list length and list reverse predicates
+		and a predicate for testing performance of the built-in predicates
+		assertz/1 and retract/1
 	module.pl (not loaded by default; see below)
-		contains the same definition of a list length predicate 
-		encapsulated in a module
+		contains the same definitions of the list length and list reverse
+		predicates encapsulated in a module
 	objects.lgt
-		contains an object encapsulating the same definition of a list   
-		length predicate, plus two descendant objects to simulate a small 
-		hierarchy (used for testing calls to imported category predicates)
+		contains an object encapsulating the same definitions of list length
+		and list reverse predicates, plus two descendant objects to simulate
+		a small hierarchy (used for testing calls to imported category
+		predicates)
 	database.lgt
 		contains predicates for testing the performance of the built-in 
 		database methods assertz/1 and retract/1
@@ -56,16 +57,17 @@ files. The reason for using the .lgt extension for these files is simply to
 make it possible to load all the example code using calls to the predicates 
 logtalk_load/1-2.
 
-By default, the benchmark tests on the SCRIPT file use a list of 20 elements 
-as an argument to the list length predicates. When dynamic binding is used, 
-increasing the list length leads to decreasing performance differences between 
-plain Prolog and Logtalk as the list length computation time far outweighs the
-overhead of the message sending mechanism. Likewise, decreasing the list 
-length leads to increasing performance differences between plain Prolog and 
-Logtalk (up to the point you will be measuring the Logtalk message sending 
-mechanism overhead compared to plain Prolog predicate calls). In real-life 
-applications, only testing can give you a balanced view on the trade-offs 
-between plain Prolog performance and Logtalk programming features.
+By default, the benchmark tests on the SCRIPT file use a list of 30 elements 
+as an argument to the list length and list reverse predicates. When dynamic
+binding is used, increasing the list length results in decreasing performance
+differences between plain Prolog and Logtalk as the length and reverse
+computation times far outweigh the overhead of the message sending mechanism.
+Likewise, decreasing the list length leads to increasing performance
+differences between plain Prolog and Logtalk (up to the point you will be
+measuring the Logtalk message sending mechanism overhead compared to plain
+Prolog predicate calls). In real-life applications, only testing can give
+you a balanced view on the trade-offs between plain Prolog performance and
+Logtalk programming features.
 
 By default, the loader files used to load the example code do not load the 
 module.pl file. Edit these files if your Prolog compiler supports a module
